--- a/rules.html
+++ b/rules.html
@@ -42,13 +42,13 @@
 			<strong><span style="text-decoration: underline">INFO :</span></strong><br />
 				&emsp;• The mobGriefing gamerule is disabled. This means that when creepers explode, they do not damage the ground. This is because <strong>I. H A T E.  C R E E P E R S.</strong><br />
 				&emsp;• There are no /home nor TP commands.<br />
-				&emsp;• You will not lose your items when you die. They will be put in a totem at the location of your death. To get them back, you need to pick up the totem and right click it (note that the items won't be put back in their slots) (from <a href="https://www.curseforge.com/minecraft/mc-mods/charm">Charm</a>).<br />
-				&emsp;• You run faster on paths blocks (from <a href="https://www.curseforge.com/minecraft/mc-mods/block-runner">Block Runner</a>).<br />
-				&emsp;• There are a lot more seeds and foods (from <a href="https://www.curseforge.com/minecraft/mc-mods/croptopia-fabric">Croptopia</a>).<br />
-				&emsp;• There are backpacks (from <a href="https://www.curseforge.com/minecraft/mc-mods/inmis">Inmis</a>).<br>
-				&emsp;• You can craft every block and item from vanilla (from elytra to totem go undying) (from <a href="https://www.planetminecraft.com/data-pack/mysticat-s-extra-vanilla-recipes/">Mysticat's Extra Recipes datapack</a>).<br />
-				&emsp;• Leaf decay if blazing fast (from <a href="https://www.planetminecraft.com/data-pack/fast-leaf-decay-the-best/">Fast Leaf Decay Datapack</a>)<br/>
-				&emsp;• You can twerk to grow up trees (from <a href="https://www.planetminecraft.com/data-pack/twerking-for-trees/">Twerking For Trees Datapack</a>).
+				&emsp;• You will not lose your items when you die. They will be put in a totem at the location of your death. To get them back, you need to pick up the totem and right click it (note that the items won't be put back in their slots) (from <a class="ModsList" href="https://www.curseforge.com/minecraft/mc-mods/charm">Charm</a>).<br />
+				&emsp;• You run faster on paths blocks (from <a class="ModsList" href="https://www.curseforge.com/minecraft/mc-mods/block-runner">Block Runner</a>).<br />
+				&emsp;• There are a lot more seeds and foods (from <a class="ModsList" href="https://www.curseforge.com/minecraft/mc-mods/croptopia-fabric">Croptopia</a>).<br />
+				&emsp;• There are backpacks (from <a class="ModsList" href="https://www.curseforge.com/minecraft/mc-mods/inmis">Inmis</a>).<br>
+				&emsp;• You can craft every block and item from vanilla (from elytra to totem go undying) (from <a class="ModsList" href="https://www.planetminecraft.com/data-pack/mysticat-s-extra-vanilla-recipes/">Mysticat's Extra Recipes datapack</a>).<br />
+				&emsp;• Leaf decay if blazing fast (from <a class="ModsList" href="https://www.planetminecraft.com/data-pack/fast-leaf-decay-the-best/">Fast Leaf Decay Datapack</a>)<br/>
+				&emsp;• You can twerk to grow up trees (from <a class="ModsList" href="https://www.planetminecraft.com/data-pack/twerking-for-trees/">Twerking For Trees Datapack</a>).
 		</p>
 	</div>
 
