--- a/Mods.html
+++ b/Mods.html
@@ -23,7 +23,7 @@
 		<p class="title">Mods</p>
 	</body>
 	<div class="paragraphe">
-		<p class="rules">Welcome to Brackets ! <br>Brackets is a modded SMP which runs on Fabric.<br> Under this text you will find two links to download the mods<br> The first link is for MultiMC users (it's the whole Minecraft instance)<br> The second link is for a normal Minecraft player who just want to download the mods.<br><br><a href="modslist.html" class="ModsList">Mods List</a></p>
+		<p class="paragraphe-smol">Welcome to Brackets ! <br>Brackets is a modded SMP which runs on Fabric.<br> Under this text you will find two links to download the mods<br> The first link is for MultiMC users (it's the whole Minecraft instance)<br> The second link is for a normal Minecraft player who just want to download the mods.<br><br><a href="modslist.html" class="ModsList">Mods List</a></p>
 	</div>
 		<p class="multimc">MultiMC</p>>
 			<a href="https://github.com/Brackets-smp/Brackets-smp.github.io/releases/download/1.0.0/Brackets.MultiMC.Instance.zip" class="btn">Download | MultiMC</a>
