--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<p class="title">Welcome to Brackets SMP!</p>
 		<div class="paragraphe">
 			<p class="paragraphe-smol"><span style="text-decoration: underline">What's Brackets ?</span>
-				<br> Brackets is a new modded Minecraft SMP (by NoEnd_ and Astrali_GD) inspired by <a href="https://alinea-mc.com/">Alinea SMP</a>. To play it, you first need to get the modpack (download link below)
+				<br> Brackets is a new modded Minecraft SMP (by NoEnd_ and Astrali_GD) inspired by <a class="ModsList" href="https://alinea-mc.com/">Alinea SMP</a>. To play it, you first need to get the modpack (download link below)
 				<br> and you need to join the server by connecting to 51.195.181.115:25571
 				<br>You need to be whitelisted to play on the server.
 				<br>
