Fixed rules.html and modslist.html

--- a/modslist.html
+++ b/modslist.html
@@ -23,7 +23,7 @@
 		<p class="title">Mods List :</p>
 	</body>
 	<div class="paragraphe">
-		<p class="rules">• accurate-block-placement-1.0.12 <br>
+		<p class="paragraphe-smol">• accurate-block-placement-1.0.12 <br>
 			• advancementinfo-1.18.2-fabric0.47.10-1.3.1 <br>
 			• animatica-0.4+1.18<br>
 			• antighost-1.18.2-fabric0.47.10-1.1.4<br>
