--- a/rules.html
+++ b/rules.html
@@ -29,7 +29,7 @@
 					&emsp;&emsp;• Steal nor grief are allowed.<br />
 					&emsp;&emsp;• There are no claims, so the server is based around trust.<br />
 					&emsp;&emsp;• PVP is not allowed until your opponent agrees to fight.<br />
-					&emsp;&emsp;• Selling elytras is forbidden.<br />
+					&emsp;&emsp;• Selling elytras is forbidden until you crafted them (you can't sell elytras that you found in the End).<br />
 					&emsp;&emsp;• You can't have more than 2 elytras (if the first breaks, for example).<br />
 					&emsp;&emsp;• Don't kill animals very often (they respawn slowly, just make a farm).<br />
 					&emsp;&emsp;• Cheats which give you an unfair advantage are not allowed (mods like X-Ray).<br />
