Final update on rules

--- a/rules.html
+++ b/rules.html
@@ -26,16 +26,16 @@
 		<p class="paragraphe-smol">
 			<strong><span style="text-decoration: underline">RULES :</span></strong><br />
 				&emsp;• <strong>General rules :</strong><br />
-					&emsp;&emsp;• Steal nor grief are allowed.<br />
+					&emsp;&emsp;• Steal and grief aren't allowed.<br />
 					&emsp;&emsp;• There are no claims, so the server is based around trust.<br />
 					&emsp;&emsp;• PVP is not allowed until your opponent agrees to fight.<br />
-					&emsp;&emsp;• Selling elytras is forbidden until you crafted them (you can't sell elytras that you found in the End).<br />
 					&emsp;&emsp;• You can't have more than 2 elytras (if the first breaks, for example).<br />
 					&emsp;&emsp;• Don't kill animals very often (they respawn slowly, just make a farm).<br />
 					&emsp;&emsp;• Cheats which give you an unfair advantage are not allowed (mods like X-Ray).<br />
 					&emsp;&emsp;• Cheat clients like Wurst are not allowed.<br />
 				&emsp;• <strong>Shops rules :</strong><br />
 					&emsp;&emsp;• Don't steal the resources of the shops.<br />
+					&emsp;&emsp;• Selling elytras is forbidden until you crafted them (you can't sell elytras that you found in the End).<br />
 					&emsp;&emsp;• Respect the prices.<br />
 					&emsp;&emsp;• Don't copy people's shops, please.  </p>
 		<p class="paragraphe-smol">
