Updated the site after Astrali_GD left

--- a/index.html
+++ b/index.html
@@ -23,24 +23,19 @@
 		<p class="title">Welcome to Brackets SMP!</p>
 		<div class="paragraphe">
 			<p class="paragraphe-smol"><span style="text-decoration: underline">What's Brackets ?</span>
-				<br> Brackets is a new modded Minecraft SMP (by NoEnd_ and Astrali_GD) inspired by <a class="ModsList" href="https://alinea-mc.com/">Alinea SMP</a>. To play it, you first need to get the modpack (download link below)
+				<br> Brackets is a modded Minecraft SMP by NoEnd_ and Astrali_GD (note that Astrali_GD is no longer playing on the server) inspired by <a class="ModsList" href="https://alinea-mc.com/">Alinea SMP</a>. To play it, you first need to get the modpack (download link below)
 				<br> and you need to join the server by connecting to 51.195.181.115:25571
-				<br>You need to be whitelisted to play on the server.
+				<br> Please note that is server is NOT cracked.
 				<br>
 				<br><span style="text-decoration: underline">How to join Brackets?</span>
 				<br>As I said earlier, you need to connect to the Minecraft server using the following IP, 51.195.181.115:25571
 				<br> But don't forget to have all the mods while joining!
-				<br>You may have seen that you need to be whitelisted to enter.
-				<br>
-				<br> <span style="text-decoration: underline">How to be whitelisted?</span>
-				<br> It's simple, you just need to join the Discord server and create a ticket !
-				<br> A moderator will ask you questions to see if you can play (if you're not toxic, if you know the server's rules, etc) and normally you will be whitelisted !</p>
 			</div>
 			<p class="paragraphe-smol"><span style="text-decoration: underline">Minecraft Infos :</span>
-				<br>Version : 1.18.2
-				<br>IP : 51.195.181.115:25571
-				<br>Modloader : Fabric
-				<br>Whitelist : ON
+				<br>Minecraft Version: 1.18.2 Java Edition
+				<br>IP: 51.195.181.115:25571
+				<br>Mod loader: Fabric
+				<br>Whitelist: OFF
 			</p>
 			<a href="https://discord.gg/D6gW9fc4Bf">
 				<img src="Discord.png" class="img"></img>
