--- a/Mods.html
+++ b/Mods.html
@@ -28,7 +28,7 @@
 		<p class="multimc">MultiMC</p>>
 			<a href="https://github.com/Brackets-smp/Brackets-smp.github.io/releases/download/1.1/Brackets.MultiMC.Instance.zip" class="btn">Download | MultiMC</a>
 		<p class="Mods">Mods</p>
-			<a href="https://github.com/Brackets-smp/Brackets-smp.github.io/releases/download/1.1/Brackets.SMP.Mods.zip" class="download">Download | Mods</a>
+			<a href="https://github.com/Brackets-smp/Brackets-smp.github.io/releases/download/1.1/Brackets.Mods.zip" class="download">Download | Mods</a>
 			<a href="https://discord.gg/D6gW9fc4Bf">
 				<img src="Discord.png" class="img"></img>
 			</a>
