--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 		<div class="paragraphe">
 			<p class="paragraphe-smol"><span style="text-decoration: underline">What's Brackets ?</span>
 				<br> Brackets is a new modded Minecraft SMP (by NoEnd_ and Astrali_GD) inspired by <a class="ModsList" href="https://alinea-mc.com/">Alinea SMP</a>. To play it, you first need to get the modpack (download link below)
-				<br> and you need to join the server by connecting to 51.195.181.115:25571
+				<br> and you need to join the server by connecting to brackets-smp.my.pebble.host
 				<br>You need to be whitelisted to play on the server.
 				<br>
 				<br><span style="text-decoration: underline">How to join Brackets?</span>
-				<br>As I said earlier, you need to connect to the Minecraft server using the following IP, 51.195.181.115:25571
+				<br>As I said earlier, you need to connect to the Minecraft server using the following IP, brackets-smp.my.pebble.host
 				<br> But don't forget to have all the mods while joining!
 				<br>You may have seen that you need to be whitelisted to enter.
 				<br>
@@ -37,8 +37,8 @@
 				<br> A moderator will ask you questions to see if you can play (if you're not toxic, if you know the server's rules, etc) and normally you will be whitelisted !</p>
 			</div>
 			<p class="paragraphe-smol"><span style="text-decoration: underline">Minecraft Infos :</span>
-				<br>Version : 1.18.2
-				<br>IP : 51.195.181.115:25571
+				<br>Version : 1.19.2
+				<br>IP : brackets-smp.my.pebble.host
 				<br>Modloader : Fabric
 				<br>Whitelist : ON
 			</p>
