--- a/Mods.html
+++ b/Mods.html
@@ -23,12 +23,33 @@
 		<p class="title">Mods</p>
 	</body>
 	<div class="paragraphe">
-		<p class="paragraphe-smol">Welcome to Brackets ! <br>Brackets is a modded SMP which runs on Fabric.<br> Under this text you will find two links to download the mods<br> The first link is for MultiMC users (it's the whole Minecraft instance)<br> The second link is for a normal Minecraft player who just want to download the mods.<br><br><a href="modslist.html" class="ModsList">Mods List</a></p>
+		<div class="paragraphe-smol">
+		<p>Welcome to Brackets ! <br>Brackets is a modded SMP which runs on Fabric.<br> Under this text you will find two links to download the mods<br> The first link is for MultiMC users (it's the whole Minecraft instance)<br> The second link is for regular Minecraft players who just want to download the mods.<br><br></p>
+		<p>Installation:<br>
+		Copy the mods in your mod folder (.minecraft/mods), then start your game</p>
+		<p>Optional:<br>
+		Close your game, and after that copy the configs in your config folder (.minecraft/config).</p>
+		<p>Notable mods:</p>
+		<ul>
+		<li> - Advanced Netherite: adds some new tiers of netherite, you combine the pieces with netherite ingots mixed with the other ores to make netherite-iron pieces forexample, or netherite-gold, etc.</li>
+		<li> - Axes Are Weapons: turns the axes in weapons because by default if you attack with an axe it&#39;ll remove 2 points of durability to it, makes it so it only removes 1</li>
+		<li> - Better Than Mending: adds the ability to sneak-right-click a Mending item to repair it with experience you already have</li>
+		<li> - Crops Love Rain: makes crops and saplings grow faster while it&#39;s raining</li>
+		<li> - Fabrication: some tweaks to the game</li>
+		<li> - Leaves be gone: fast leaf decay</li>
+		<li> - Plasmo Voice: an in-game proximity voice chat</li>
+		<li> - Nicer portals: make the portal any shape you want. You can also make the frame out of crying obsidian</li>
+		<li> - Realistic Sleep: makes time go faster (and furnaces and wheather too) when sleeping instead of instantly skipping the night</li>
+		<li> - Trade cycling: cycle villager trades with the click of a button (in the villager&#39;s trading interface)</li>
+		<li> - Universal Graves: adds gravestones that keep your items upon dying</li>
+		<li> - And a lot of QoL and optimisation mods!</li>
+		</ul>
+		</div>
 	</div>
 		<p class="multimc">MultiMC</p>>
-			<a href="https://github.com/Brackets-smp/Brackets-smp.github.io/releases/download/1.1/Brackets.MultiMC.Instance.zip" class="btn">Download | MultiMC</a>
+			<a href="https://github.com/Brackets-smp/Brackets-smp.github.io/releases/download/1.2/Brackets.SMP.Modpack.For.MultiMC.Users.zip" class="btn">Download | MultiMC</a>
 		<p class="Mods">Mods</p>
-			<a href="https://github.com/Brackets-smp/Brackets-smp.github.io/releases/download/1.1/Brackets.Mods.zip" class="download">Download | Mods</a>
+			<a href="https://github.com/Brackets-smp/Brackets-smp.github.io/releases/download/1.2/Brackets.SMP.Modpack.For.regular.players.zip" class="download">Download | Mods</a>
 			<a href="https://discord.gg/D6gW9fc4Bf">
 				<img src="Discord.png" class="img"></img>
 			</a>
