--- a/Mods.html
+++ b/Mods.html
@@ -32,6 +32,8 @@
 		<p>Notable mods:</p>
 		<ul>
 		<li> - Advanced Netherite: adds some new tiers of netherite, you combine the pieces with netherite ingots mixed with the other ores to make netherite-iron pieces forexample, or netherite-gold, etc.</li>
+		<li> - Create: the famous Create mod, which adds lots of redstone machines to make cool contraptions</li>
+		<li> - Charm: this adds vanilla-like features which are nice to have</li>
 		<li> - Axes Are Weapons: turns the axes in weapons because by default if you attack with an axe it&#39;ll remove 2 points of durability to it, makes it so it only removes 1</li>
 		<li> - Better Than Mending: adds the ability to sneak-right-click a Mending item to repair it with experience you already have</li>
 		<li> - Crops Love Rain: makes crops and saplings grow faster while it&#39;s raining</li>
@@ -42,7 +44,26 @@
 		<li> - Realistic Sleep: makes time go faster (and furnaces and wheather too) when sleeping instead of instantly skipping the night</li>
 		<li> - Trade cycling: cycle villager trades with the click of a button (in the villager&#39;s trading interface)</li>
 		<li> - Universal Graves: adds gravestones that keep your items upon dying</li>
+		<li> - Universal Enchants: allows for mixing enchants for tools, armor and weapons, for example Infinity + Mending, Looting on an axe, Quick Charge on bows, etc.</li>
 		<li> - And a lot of QoL and optimisation mods!</li>
+
+		Notable mods:
+    - Advanced Netherite: adds some new tiers of netherite, you combine the pieces with netherite ingots mixed with the other ores to make netherite-iron pieces forexample, or netherite-gold, etc.
+
+
+    - Axes Are Weapons: turns the axes in weapons because by default if you attack with an axe it'll remove 2 points of durability to it, makes it so it only removes 1
+    - Better Than Mending: adds the ability to sneak-right-click a Mending item to repair it with experience you already have
+    - Crops Love Rain: makes crops and saplings grow faster while it's raining
+    - Fabrication: some tweaks to the game
+    - Leaves be gone: fast leaf decay
+    - Plasmo Voice: an in-game proximity voice chat
+    - Nicer Portals: make the portal any shape you want. You can also make the frame out of crying obsidian
+    - Realistic Sleep: makes time go faster (and furnaces and wheather too) when sleeping instead of instantly skipping the night
+    - Trade Cycling: cycle villager trades with the click of a button (in the villager's trading interface)
+    - Universal Graves: adds gravestones that keep your items upon dying
+    - Universal Enchants: allows for mixing enchants for tools, armor and weapons, for example Infinity + Mending, Looting on an axe, Quick Charge on bows, etc.
+    - And a lot of QoL and optimisation mods (based on the Fabulously Optimised modpack)!
+
 		</ul>
 		</div>
 	</div>
