remove the ">" at a random place

--- a/Mods.html
+++ b/Mods.html
@@ -49,7 +49,7 @@
 		</ul>
 		</div>
 	</div>
-		<p class="multimc">MultiMC</p>>
+		<p class="multimc">MultiMC</p>
 			<a href="https://github.com/Brackets-smp/Brackets-smp.github.io/releases/download/1.2/Brackets.SMP.Modpack.For.MultiMC.Users.zip" class="btn">Download | MultiMC</a>
 		<p class="Mods">Mods</p>
 			<a href="https://github.com/Brackets-smp/Brackets-smp.github.io/releases/download/1.2/Brackets.SMP.Modpack.For.regular.players.zip" class="download">Download | Mods</a>
