--- a/Mods.html
+++ b/Mods.html
@@ -6,6 +6,7 @@
 		<title>Brackets | Mods</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="style.css">
+		<link rel="icon" type="image/x-icon" href="Logo.png">
 	</head>
 	<body>
 		<header>
