--- a/Mods.html
+++ b/Mods.html
@@ -22,54 +22,57 @@
 			</nav>
 		</header>
 		<p class="title">Mods</p>
-	</body>
-	<div class="paragraphe">
-		<div class="paragraphe-smol">
-		<p>Welcome to Brackets ! <br>Brackets is a modded SMP which runs on Fabric.<br> Under this text you will find two links to download the mods<br> The first link is for MultiMC users (it's the whole Minecraft instance)<br> The second link is for regular Minecraft players who just want to download the mods.<br><br></p>
-		<p>Installation:<br>
-		Copy the mods in your mod folder (.minecraft/mods), then start your game</p>
-		<p>Optional:<br>
-		Close your game, and after that copy the configs in your config folder (.minecraft/config).</p>
-		<p>Notable mods:</p>
-		<ul>
-		<li> - Advanced Netherite: adds some new tiers of netherite, you combine the pieces with netherite ingots mixed with the other ores to make netherite-iron pieces forexample, or netherite-gold, etc.</li>
-		<li> - Create: the famous Create mod, which adds lots of redstone machines to make cool contraptions</li>
-		<li> - Charm: this adds vanilla-like features which are nice to have</li>
-		<li> - Axes Are Weapons: turns the axes in weapons because by default if you attack with an axe it&#39;ll remove 2 points of durability to it, makes it so it only removes 1</li>
-		<li> - Better Than Mending: adds the ability to sneak-right-click a Mending item to repair it with experience you already have</li>
-		<li> - Crops Love Rain: makes crops and saplings grow faster while it&#39;s raining</li>
-		<li> - Fabrication: some tweaks to the game</li>
-		<li> - Leaves be gone: fast leaf decay</li>
-		<li> - Plasmo Voice: an in-game proximity voice chat</li>
-		<li> - Nicer portals: make the portal any shape you want. You can also make the frame out of crying obsidian</li>
-		<li> - Trade cycling: cycle villager trades with the click of a button (in the villager&#39;s trading interface)</li>
-		<li> - Universal Graves: adds gravestones that keep your items upon dying</li>
-		<li> - Universal Enchants: allows for mixing enchants for tools, armor and weapons, for example Infinity + Mending, Looting on an axe, Quick Charge on bows, etc.</li>
-		<li> - And a lot of QoL and optimisation mods!</li>
-		</ul>
+		<div class="paragraphe">
+			<div class="paragraphe-smol">
+			<p>Welcome to Brackets ! 
+				<br>Brackets is a modded SMP which runs on Fabric.
+				<br> There is a download link at the bottom of the page.
+				<br> It will take you to the GitHub's releases page, where you can download the mods in a .zip or in a MultiMC instance.
+				<br> Ignore the MultiMC instance if you don't use this launcher or one of its forks (like Prism Launcher).
+				<br><br></p>
+			<p>Installation:<br>
+			Copy the mods in your mod folder (.minecraft/mods), then start your game</p>
+			<p>Optional:<br>
+			Close your game, and after that copy the configs in your config folder (.minecraft/config).<br></p>
+			<p>Notable mods:</p>
+			<ul>
+			<li> - Advanced Netherite: adds some new tiers of netherite, you combine the pieces with netherite ingots mixed with the other ores to make netherite-iron pieces forexample, or netherite-gold, etc.</li>
+			<li> - Create: the famous Create mod, which adds lots of redstone machines to make cool contraptions</li>
+			<li> - Charm: this adds vanilla-like features which are nice to have</li>
+			<li> - Axes Are Weapons: turns the axes in weapons because by default if you attack with an axe it&#39;ll remove 2 points of durability to it, makes it so it only removes 1</li>
+			<li> - Better Than Mending: adds the ability to sneak-right-click a Mending item to repair it with experience you already have</li>
+			<li> - Crops Love Rain: makes crops and saplings grow faster while it&#39;s raining</li>
+			<li> - Fabrication: some tweaks to the game</li>
+			<li> - Leaves be gone: fast leaf decay</li>
+			<li> - Plasmo Voice: an in-game proximity voice chat</li>
+			<li> - Nicer portals: make the portal any shape you want. You can also make the frame out of crying obsidian</li>
+			<li> - Trade cycling: cycle villager trades with the click of a button (in the villager&#39;s trading interface)</li>
+			<li> - Universal Graves: adds gravestones that keep your items upon dying</li>
+			<li> - Universal Enchants: allows for mixing enchants for tools, armor and weapons, for example Infinity + Mending, Looting on an axe, Quick Charge on bows, etc.</li>
+			<li> - And a lot of QoL and optimisation mods!</li>
+			</ul>
+			</div>
 		</div>
-	</div>
-		<p class="multimc">MultiMC</p>
-			<a href="https://github.com/Brackets-smp/Brackets-smp.github.io/releases/download/1.2/Brackets.SMP.Modpack.For.MultiMC.Users.zip" class="btn">Download | MultiMC</a>
-		<p class="Mods">Mods</p>
-			<a href="https://github.com/Brackets-smp/Brackets-smp.github.io/releases/download/1.2/Brackets.SMP.Modpack.For.regular.players.zip" class="download">Download | Mods</a>
+			<p class="multimc">Download mods</p>
+				<a href="https://github.com/Brackets-smp/Brackets-smp.github.io/releases/download/1.2/Brackets.SMP.Modpack.For.MultiMC.Users.zip" class="btn">Take me to the GitHub releases page</a>
 			<a href="https://discord.gg/D6gW9fc4Bf">
 				<img src="Discord.png" class="img"></img>
 			</a>
-			<script>
-				window.onscroll = function() {
-					scroll()
-				};
+		</body>
+		<script>
+			window.onscroll = function() {
+				scroll()
+			};
 
-				function scroll() {
-					if (document.body.scrollTop > 200 ||
-							document.documentElement.scrollTop > 200) {
-						document.getElementById("nav-list").style.top = "-90px";
-					}
-					else {
-						document.getElementById("nav-list").style.top
-								= "0px";
-					}
+			function scroll() {
+				if (document.body.scrollTop > 200 ||
+						document.documentElement.scrollTop > 200) {
+					document.getElementById("nav-list").style.top = "-90px";
 				}
-			</script>
+				else {
+					document.getElementById("nav-list").style.top
+							= "0px";
+				}
+			}
+		</script>
 </html>
