Fix the line break

--- a/Mods.html
+++ b/Mods.html
@@ -31,9 +31,9 @@
 				<br> Ignore the MultiMC instance if you don't use this launcher or one of its forks (like Prism Launcher).
 				<br><br></p>
 			<p>Installation:<br>
-			Copy the mods in your mod folder (.minecraft/mods), then start your game</p>
-			<p>Optional:<br>
-			Close your game, and after that copy the configs in your config folder (.minecraft/config).<br></p>
+			Copy the mods in your mod folder (.minecraft/mods), then start your game<br>
+			Optional:<br>
+			Close your game, and after that copy the configs in your config folder (.minecraft/config).</p>
 			<p>Notable mods:</p>
 			<ul>
 			<li> - Advanced Netherite: adds some new tiers of netherite, you combine the pieces with netherite ingots mixed with the other ores to make netherite-iron pieces forexample, or netherite-gold, etc.</li>
@@ -54,7 +54,7 @@
 			</div>
 		</div>
 			<p class="multimc">Download mods</p>
-				<a href="https://github.com/Brackets-smp/Brackets-smp.github.io/releases/download/1.2/Brackets.SMP.Modpack.For.MultiMC.Users.zip" class="btn">Take me to the GitHub releases page</a>
+				<a href="https://github.com/Brackets-smp/Brackets-smp.github.io/releases" class="btn">Take me to the GitHub releases page</a>
 			<a href="https://discord.gg/D6gW9fc4Bf">
 				<img src="Discord.png" class="img"></img>
 			</a>
