--- a/Mods.html
+++ b/Mods.html
@@ -34,7 +34,7 @@
 			Copy the mods in your mod folder (.minecraft/mods), then start your game<br>
 			Optional:<br>
 			Close your game, and after that copy the configs in your config folder (.minecraft/config).</p>
-			<p>Notable mods:</p>
+			<p><br>Notable mods:</p>
 			<ul>
 			<li> - Advanced Netherite: adds some new tiers of netherite, you combine the pieces with netherite ingots mixed with the other ores to make netherite-iron pieces forexample, or netherite-gold, etc.</li>
 			<li> - Create: the famous Create mod, which adds lots of redstone machines to make cool contraptions</li>
