--- a/Mods.html
+++ b/Mods.html
@@ -36,17 +36,16 @@
 			Close your game, and after that copy the configs in your config folder (.minecraft/config).</p>
 			<p><br>Notable mods:</p>
 			<ul>
-			<li> - Advanced Netherite: adds some new tiers of netherite, you combine the pieces with netherite ingots mixed with the other ores to make netherite-iron pieces forexample, or netherite-gold, etc.</li>
-			<li> - Create: the famous Create mod, which adds lots of redstone machines to make cool contraptions</li>
-			<li> - Charm: this adds vanilla-like features which are nice to have</li>
 			<li> - Axes Are Weapons: turns the axes in weapons because by default if you attack with an axe it&#39;ll remove 2 points of durability to it, makes it so it only removes 1</li>
+			<li> - Charm: this adds vanilla-like features which are nice to have</li>
 			<li> - Better Than Mending: adds the ability to sneak-right-click a Mending item to repair it with experience you already have</li>
+			<li> - Colytra: Allows you to make a chestplate with elytra.</li>
 			<li> - Crops Love Rain: makes crops and saplings grow faster while it&#39;s raining</li>
 			<li> - Fabrication: some tweaks to the game</li>
-			<li> - Leaves be gone: fast leaf decay</li>
-			<li> - Plasmo Voice: an in-game proximity voice chat</li>
-			<li> - Nicer portals: make the portal any shape you want. You can also make the frame out of crying obsidian</li>
-			<li> - Trade cycling: cycle villager trades with the click of a button (in the villager&#39;s trading interface)</li>
+			<li> - Leaves Be Gone: fast leaf decay</li>
+			<li> - Simple Voice Chat: an in-game proximity voice chat</li>
+			<li> - Nicer Portals: make the portal any shape you want. You can also make the frame out of crying obsidian</li>
+			<li> - Trade Cycling: cycle villager trades with the click of a button (in the villager&#39;s trading interface)</li>
 			<li> - Universal Graves: adds gravestones that keep your items upon dying</li>
 			<li> - Universal Enchants: allows for mixing enchants for tools, armor and weapons, for example Infinity + Mending, Looting on an axe, Quick Charge on bows, etc.</li>
 			<li> - And a lot of QoL and optimisation mods!</li>
