Remove whitelist paragraph

--- a/index.html
+++ b/index.html
@@ -27,21 +27,12 @@
 				<br> Brackets is a modded Minecraft SMP (by EnderPrism and Astrali_) inspired by <a class="ModsList" href="https://alinea-mc.com/">Alinea SMP</a>. To play it, you first need to get the modpack (download link below)
 				<br> and you need to join the server by connecting to brackets-smp.my.pebble.host
 				<br>You need to be whitelisted to play on the server.
-				<br>
-				<br><span style="text-decoration: underline">How to join Brackets?</span>
-				<br>As I said earlier, you need to connect to the Minecraft server using the following IP, brackets-smp.my.pebble.host
-				<br> But don't forget to have all the mods while joining!
-				<br>You may have seen that you need to be whitelisted to enter.
-				<br>
-				<br> <span style="text-decoration: underline">How to be whitelisted?</span>
-				<br> It's simple, you just need to join the Discord server and create a ticket !
-				<br> A moderator will ask you questions to see if you can play (if you're not toxic, if you know the server's rules, etc) and normally you will be whitelisted !</p>
 			</div>
 			<p class="paragraphe-smol"><span style="text-decoration: underline">Minecraft Infos :</span>
 				<br>Version : 1.19.2
 				<br>IP : brackets-smp.my.pebble.host
 				<br>Modloader : Fabric
-				<br>Whitelist : ON
+				<br>Whitelist : OFF
 			</p>
 			<a href="https://discord.gg/D6gW9fc4Bf">
 				<img src="Discord.png" class="img"></img>
