change mods link reference

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<p class="title">Welcome to Brackets SMP!</p>
 		<div class="paragraphe">
 			<p class="paragraphe-smol"><span style="text-decoration: underline">What's Brackets ?</span>
-				<br> Brackets is a modded Minecraft SMP (by EnderPrism and Astrali_) inspired by <a class="ModsList" href="https://alinea-mc.com/">Alinea SMP</a>. To play it, you first need to get the modpack (download link below)
+				<br> Brackets is a modded Minecraft SMP (by EnderPrism and Astrali_) inspired by <a class="ModsList" href="https://alinea-mc.com/">Alinea SMP</a>. To play it, you first need to get the modpack (download link in the mods tab)
 				<br> and you need to join the server by connecting to brackets-smp.my.pebble.host
 				<br>You need to be whitelisted to play on the server.
 			</div>
