--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<p class="paragraphe-smol"><span style="text-decoration: underline">What's Brackets ?</span>
 				<br> Brackets is a modded Minecraft SMP (by EnderPrism and Astrali_) inspired by <a class="ModsList" href="https://alinea-mc.com/">Alinea SMP</a>. To play it, you first need to get the modpack (download link in the mods tab),
 				and you need to join the server by connecting to "brackets-smp.my.pebble.host".
-				<br>You need to be whitelisted to play on the server.
+				<br>You don't need to be whitelisted to play on the server.
 			</div>
 			<p class="paragraphe-smol"><span style="text-decoration: underline">Minecraft Infos :</span>
 				<br>Version : 1.19.2
