--- a/rules.html
+++ b/rules.html
@@ -36,8 +36,8 @@
 					&emsp;&emsp;• Cheat clients like Wurst are not allowed.<br />
 				&emsp;• <strong>Shops rules :</strong><br />
 					&emsp;&emsp;• Don't steal the resources of the shops.<br />
-					&emsp;&emsp;• Selling elytras is forbidden until you crafted them (you can't sell elytras that you found in the End).<br />
-					&emsp;&emsp;• Respect the prices.<br />
+					&emsp;&emsp;• You can't get more than 5 elytras in total (they still count even if you sell them). This is to avoid people having monopoly over the elytra market and selling them really at a really expensive cost.<br />
+					&emsp;&emsp;• Respect the prices (obviously).<br />
 	</div>
 
 	<a href="https://discord.gg/D6gW9fc4Bf">
