--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>Brackets | Main</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="style.css">
+		<link rel="icon" type="image/x-icon" href="Logo.png">
 	</head>
 	<body>
 		<header>
@@ -16,32 +17,24 @@
 						<li class="nav-item">Brackets</li>
 					</a>
 					<a href="rules.html"><li class="nav-item">Rules</li></a>
-					<li class="TheChosenOne"><a href="Mods.html">Mods</a></li>
+					<li class="TheChosenOne"><a href="mods.html">Mods</a></li>
 				</ul>
 			</nav>
 		</header>
 		<p class="title">Welcome to Brackets SMP!</p>
 		<div class="paragraphe">
-			<p class="paragraphe-smol"><span style="text-decoration: underline">What's Brackets ?</span>
-				<br> Brackets is a new modded Minecraft SMP (by NoEnd_ and Astrali_GD) inspired by <a class="ModsList" href="https://alinea-mc.com/">Alinea SMP</a>. To play it, you first need to get the modpack (download link below)
-				<br> and you need to join the server by connecting to brackets-smp.my.pebble.host
-				<br>You need to be whitelisted to play on the server.
-				<br>
-				<br><span style="text-decoration: underline">How to join Brackets?</span>
-				<br>As I said earlier, you need to connect to the Minecraft server using the following IP, brackets-smp.my.pebble.host
-				<br> But don't forget to have all the mods while joining!
-				<br>You may have seen that you need to be whitelisted to enter.
-				<br>
-				<br> <span style="text-decoration: underline">How to be whitelisted?</span>
-				<br> It's simple, you just need to join the Discord server and create a ticket !
-				<br> A moderator will ask you questions to see if you can play (if you're not toxic, if you know the server's rules, etc) and normally you will be whitelisted !</p>
-			</div>
-			<p class="paragraphe-smol"><span style="text-decoration: underline">Minecraft Infos :</span>
-				<br>Version : 1.19.2
+			<span style="text-decoration: underline">→ What's Brackets ?</span>
+				<br> Brackets is a modded Minecraft SMP hosted by EnderPrism.
+				<br> Just make sure you've downloaded the modpack and you'll be ready to go! You can download it from the <a href="mods.html" class="text-block-links">mods</a> tab.
+				<br> The server's IP can be found below.
+				<br> You can also join the <a href="https://discord.gg/D6gW9fc4Bf" class="text-block-links">Discord server</a> to chat with other players.
+			<br><br>
+				<span style="text-decoration: underline">→ Server Info :</span>
+				<br>Version : 1.20.1
 				<br>IP : brackets-smp.my.pebble.host
 				<br>Modloader : Fabric
 				<br>Whitelist : ON
-			</p>
+			</div>
 			<a href="https://discord.gg/D6gW9fc4Bf">
 				<img src="Discord.png" class="img"></img>
 			</a>
