--- a/rules.html
+++ b/rules.html
@@ -6,6 +6,7 @@
 		<title>Brackets | Rules</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="style.css">
+		<link rel="icon" type="image/x-icon" href="Logo.png">
 	</head>
 	<body>
 		<header>
@@ -16,27 +17,36 @@
 						<li class="nav-item">Brackets</li>
 					</a>
 					<a href="rules.html"><li class="nav-item">Rules</li></a>
-					<li class="TheChosenOne"><a href="Mods.html">Mods</a></li>
+					<li class="TheChosenOne"><a href="mods.html">Mods</a></li>
 				</ul>
 			</nav>
 		</header>
 		<p class="title">Rules :</p>
 	</body>
 	<div class="paragraphe">
-		<p class="paragraphe-smol">
-			<strong><span style="text-decoration: underline">RULES :</span></strong><br />
-				&emsp;• <strong>General rules :</strong><br />
-					&emsp;&emsp;• Steal and grief aren't allowed.<br />
-					&emsp;&emsp;• There are no claims, so the server is based around trust.<br />
-					&emsp;&emsp;• PVP is not allowed until your opponent agrees to fight.<br />
-					&emsp;&emsp;• You can't have more than 2 elytras (if the first breaks, for example).<br />
-					&emsp;&emsp;• Don't kill animals very often (they respawn slowly, just make a farm).<br />
-					&emsp;&emsp;• Cheats which give you an unfair advantage are not allowed (mods like X-Ray).<br />
-					&emsp;&emsp;• Cheat clients like Wurst are not allowed.<br />
-				&emsp;• <strong>Shops rules :</strong><br />
-					&emsp;&emsp;• Don't steal the resources of the shops.<br />
-					&emsp;&emsp;• Selling elytras is forbidden until you crafted them (you can't sell elytras that you found in the End).<br />
-					&emsp;&emsp;• Respect the prices.<br />
+		<h2 id="general-rules">General rules :</h2>
+		<ul>
+		<li>Steal and grief aren’t allowed.</li>
+		<li>Claims in <a href="https://discord.com/channels/971428247386591233/1041793263549550632" class="text-block-links">#claims</a>. People are prohibited from doing anything in your
+		claims unless you tell them.</li>
+		<li>PVP is not allowed until your opponent agrees to fight.</li>
+		<li>You can't have more than 2 elytras (if the first breaks, for
+		example).</li>
+		<li>Don’t kill animals often near spawn (they respawn slowly, just make
+		a farm).</li>
+		<li>Cheats which give you an unfair advantage are not allowed (mods like
+		X-Ray or Freecam).</li>
+		<li>Cheat clients like Wurst are not allowed.</li>
+		<li><strong>Seed mappers are <span style="text-decoration: underline;">forbidden</span>. If you leak the seed you'll be
+		banned.</strong></li>
+		<li>Traps are not allowed (be nice to each other).</li>
+		</ul>
+		<h2 id="shops-rules">Shops rules :</h2>
+		<ul>
+		<li>Don’t steal the resources of the shops.</li>
+		<li>Selling elytras is forbidden.</li>
+		<li>Respect the prices.</li>
+		</ul>
 	</div>
 
 	<a href="https://discord.gg/D6gW9fc4Bf">
